fix - overflow for mobile overview page

--- a/src/Style/Subpages.scss
+++ b/src/Style/Subpages.scss
@@ -804,6 +804,7 @@
       gap: 0.5rem;
       .category-btn {
         font-size: 0.8rem;
+        padding: 0.5rem 0.5rem;
       }
     }
 
@@ -817,15 +818,21 @@
       width: max-content;
     }
 
-    .cateInfo .image-info{
-      &::before{
-        width: auto;
-        height: 110%;
+    .cateInfo {
+      min-height: 350px;
+      max-height: 355px;
+      display: flex;
+
+      .image-info {
+        &::before {
+          width: auto;
+          height: 110%;
+        }
+        img {
+          min-height: auto;
+        }
       }
-      img {
-      min-height: auto;
     }
-    } 
   }
 }
 
@@ -840,7 +847,7 @@
 
     .cateList {
       gap: 0rem;
-      
+
       .category-btn {
         font-size: 0.65rem;
       }
